[project]
name = "ai_travel_agent"
version = "0.1.0"
description = "AI-powered travel agent that generates personalized travel itineraries using OpenAI GPT-4o"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0",
    "icalendar>=6.0.1",
    "pytz>=2024.1",
    "streamlit>=1.28.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.5.0",
]

[project.scripts]
ai_travel_agent = "ai_travel_agent.main:run"
run_crew = "ai_travel_agent.main:run"
train = "ai_travel_agent.main:train"
replay = "ai_travel_agent.main:replay"
test = "ai_travel_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
